byte-code-compiler/test_files/typing/bad/testfile-unique-1.psc
i32 main() {
  i32 x=1;
  if (1) {
    i32 x=2;
  }
  return 3;
}
